// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichTextDisplay renders correctly with a link 1`] = `
<View>
  <Autolink
    email={true}
    hashtag={false}
    latlng={false}
    linkStyle={
      Object {
        "color": "rgb(51, 51, 51)",
        "textDecorationLine": "underline",
      }
    }
    mention={false}
    onPress={[Function]}
    phone={true}
    showAlert={false}
    stripPrefix={true}
    stripTrailingSlash={true}
    style={
      Object {
        "fontSize": 16,
      }
    }
    text="Nao."
    truncate={32}
    truncateChars=".."
    truncateLocation="smart"
    twitter={false}
    url={true}
    webFallback={false}
  />
  <LinkPreview
    url="https://www.bbc.co.uk/news/business-50656178"
  />
</View>
`;

exports[`RichTextDisplay renders correctly without a link 1`] = `
<View>
  <Autolink
    email={true}
    hashtag={false}
    latlng={false}
    linkStyle={
      Object {
        "color": "rgb(51, 51, 51)",
        "textDecorationLine": "underline",
      }
    }
    mention={false}
    onPress={[Function]}
    phone={true}
    showAlert={false}
    stripPrefix={true}
    stripTrailingSlash={true}
    style={
      Object {
        "fontSize": 16,
      }
    }
    text="Nao."
    truncate={32}
    truncateChars=".."
    truncateLocation="smart"
    twitter={false}
    url={true}
    webFallback={false}
  />
</View>
`;
